--- a/index.html
+++ b/index.html
@@ -5,22 +5,6 @@
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="theme-color" content="#000000" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-
-    <!-- fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <script
-      src="https://kit.fontawesome.com/9184a2b45f.js"
-      crossorigin="anonymous"
-    ></script>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
     <meta
       Content-Security-Policy-Report-Only:
       script-src="
@@ -30,12 +14,35 @@
       connect-src="
     https://accounts.google.com/gsi/"
     />
+
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100&display=swap"
+      rel="stylesheet"
+    />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
       rel="stylesheet"
     />
-    <title>TRAVELEX | Home</title>
+    <script
+      src="https://kit.fontawesome.com/9184a2b45f.js"
+      crossorigin="anonymous"
+    ></script>
+    <meta
+      name="description"
+      content="A tourism website built to support and solve issues of tourism in Enugu State"
+    />
+    <meta
+      name="keywords"
+      content="Enugu tourism relax sites tours lodging accommodation flight"
+    />
+    <title>ESTC | Home</title>
   </head>
   <body>
     <div id="root"></div>
